--- a/public/173_kspo/card/08.html
+++ b/public/173_kspo/card/08.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO_169 08_snack 글로벌 미국</title>
+    <title>KSPO_173 08_expo</title>
   </head>
 
   <body>
@@ -17,18 +17,18 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_expo/conf01.jpg"
             alt="1번"
             style="display: block"
             width="750"
-            usemap="#snack01"
+            usemap="#expo01"
           />
-          <!-- <map name="snack01">
+          <!-- <map name="expo01">
             <area
               shape="rect"
               alt="링크"
               title=""
-              coords="9,5,822,329"
+              coords="40,330,450,600"
               href="card/01.html"
               target="_blank"
             />
@@ -38,148 +38,106 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_expo/conf02.jpg"
             alt="1번"
             style="display: block"
             width="750"
-            usemap="#snack02"
+            usemap="#expo00"
           />
-          <!-- <map name="snack02">
+          <map name="expo00">
             <area
               shape="rect"
               alt="링크"
               title=""
-              coords="9,5,822,329"
-              href="card/01.html"
+              coords="40,330,450,600"
+              href="https://gocaf.kr/exhibition-info/2024-gocaf-kintex-the-final-season1/"
               target="_blank"
             />
-          </map> -->
+          </map>
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_expo/conf03.jpg"
             alt="1번"
             style="display: block"
             width="750"
-            usemap="#snack02"
+            usemap="#expo01"
           />
-          <!-- <map name="snack02">
+          <map name="expo01">
             <area
               shape="rect"
               alt="링크"
               title=""
-              coords="9,5,822,329"
-              href="card/01.html"
+              coords="40,330,450,600"
+              href="https://www.korearvshow.com/index.asp"
               target="_blank"
             />
-          </map> -->
+          </map>
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_expo/conf04.jpg"
             alt="1번"
             style="display: block"
             width="750"
-            usemap="#snack02"
+            usemap="#expo02"
           />
-          <!-- <map name="snack02">
+          <map name="expo02">
             <area
               shape="rect"
               alt="링크"
               title=""
-              coords="9,5,822,329"
-              href="card/01.html"
+              coords="40,330,450,600"
+              href="https://www.ibexshow.com/"
               target="_blank"
             />
-          </map> -->
+          </map>
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_expo/conf05.jpg"
             alt="1번"
             style="display: block"
             width="750"
-            usemap="#snack02"
+            usemap="#expo03"
           />
-          <!-- <map name="snack02">
+          <map name="expo03">
             <area
               shape="rect"
               alt="링크"
               title=""
-              coords="9,5,822,329"
-              href="card/01.html"
+              coords="40,330,450,600"
+              href="https://www.chanchao.com.tw/taiwanoutdoor/taipei/"
               target="_blank"
             />
-          </map> -->
+          </map>
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_expo/conf06.jpg"
             alt="1번"
             style="display: block"
             width="750"
-            usemap="#snack02"
+            usemap="#expo04"
           />
-          <!-- <map name="snack02">
+          <map name="expo04">
             <area
               shape="rect"
               alt="링크"
               title=""
-              coords="9,5,822,329"
-              href="card/01.html"
+              coords="40,330,450,600"
+              href="https://www.chinafish.cn"
               target="_blank"
             />
-          </map> -->
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack07.jpg"
-            alt="1번"
-            style="display: block"
-            width="750"
-            usemap="#snack02"
-          />
-          <!-- <map name="snack02">
-            <area
-              shape="rect"
-              alt="링크"
-              title=""
-              coords="9,5,822,329"
-              href="card/01.html"
-              target="_blank"
-            />
-          </map> -->
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/08_snack/snack08.jpg"
-            alt="1번"
-            style="display: block"
-            width="750"
-            usemap="#snack02"
-          />
-          <!-- <map name="snack02">
-            <area
-              shape="rect"
-              alt="링크"
-              title=""
-              coords="9,5,822,329"
-              href="card/01.html"
-              target="_blank"
-            />
-          </map> -->
+          </map>
         </td>
       </tr>
     </table>
