--- a/public/173_kspo/card/10.html
+++ b/public/173_kspo/card/10.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/10_gsr/gsr01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/09_event/event01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,28 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/10_gsr/gsr02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/09_event/event02.jpg"
+            alt="1번"
+            style="display: block"
+            width="750"
+            usemap="#snack02"
+          />
+          <!-- <map name="snack02">
+            <area
+              shape="rect"
+              alt="링크"
+              title=""
+              coords="9,5,822,329"
+              href="card/01.html"
+              target="_blank"
+            />
+          </map> -->
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240920/sub/09_event/event03.jpg"
             alt="1번"
             style="display: block"
             width="750"
