--- a/public/173_kspo/main.html
+++ b/public/173_kspo/main.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO 171 뉴스레터</title>
+    <title>KSPO 173 뉴스레터</title>
   </head>
 
   <body>
@@ -19,13 +19,13 @@
         <tr>
           <td>
             <img
-              src="https://godjewel.co.kr/172_kspo/src/cover01.jpg"
+              src="https://godjewel.co.kr/173_kspo/src/cover01.jpg"
               alt="뉴스레터 상단"
               style="display: block"
               width="730"
             />
             <img
-              src="https://godjewel.co.kr/172_kspo/src/cover02.jpg"
+              src="https://godjewel.co.kr/173_kspo/src/cover02.jpg"
               usemap="#map"
               alt="뉴스레터 하단"
               style="display: block"
@@ -36,7 +36,7 @@
                 shape="rect"
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
-                coords="24,203,229,283"
+                coords="512,385,717,466"
                 href="./card/01.html"
                 target="_blank"
               />
@@ -44,7 +44,7 @@
                 shape="rect"
                 alt="스포츠굿즈서비스"
                 title=""
-                coords="33,718,230,787"
+                coords="24,897,228,980"
                 href="./card/02.html"
                 target="_blank"
               />
@@ -52,7 +52,7 @@
                 shape="rect"
                 alt="*"
                 title="선도기업 성과사례"
-                coords="400,1326,604,1412"
+                coords="392,1323,613,1398"
                 href="./card/03.html"
                 target="_blank"
               />
@@ -60,7 +60,7 @@
                 shape="rect"
                 alt="*"
                 title="이슈페이퍼"
-                coords="348,1835,543,1901"
+                coords="9,1676,229,1772"
                 href="./card/04.html"
                 target="_blank"
               />
@@ -68,7 +68,7 @@
                 shape="rect"
                 alt="*"
                 title="SI포커스"
-                coords="200,2100,400,2160"
+                coords="500,2111,714,2208"
                 href="./card/05.html"
                 target="_blank"
               />
@@ -76,23 +76,31 @@
                 shape="rect"
                 alt="스포츠동향아카이브"
                 title=""
-                coords="263,2625,468,2690"
+                coords="31,2785,228,2854"
                 href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6141&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
+                target="_blank"
+              />
+              <area
+                shape="rect"
+                alt="gsr"
+                title=""
+                coords="6,3193,251,3287"
+                href="https://m.sports.re.kr/front/board/bs/boardView.do?board_seq=101&pageNo=1&menu_seq=+976&con_seq=6179&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠컨퍼런스박람회"
                 title=""
-                coords="259,3256,460,3328"
-                href="./card/07.html"
+                coords="13,3531,216,3606"
+                href="./card/08.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt=""
                 title="한국스포츠정책과학원"
-                coords="468,3422,550,3504"
+                coords="467,3897,548,3979"
                 href="https://spobiz.kspo.or.kr/front/index.do"
                 target="_blank"
               />
@@ -100,7 +108,7 @@
                 shape="rect"
                 alt=""
                 title="인스타그램"
-                coords="554,3419,624,3496"
+                coords="550,3900,623,3978"
                 href="https://www.instagram.com/kspo_newsletter/"
                 target="_blank"
               />
@@ -108,8 +116,16 @@
                 shape="rect"
                 alt="스낵스포츠-인스타로 연결"
                 title=""
-                coords="499,3777,668,3836"
-                href="https://www.instagram.com/p/C_JoDFmzNuz/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                coords="511,4383,706,4459"
+                href="https://www.instagram.com/p/DAX0P1wTN-L/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                target="_blank"
+              />
+              <area
+                shape="rect"
+                alt="이벤트"
+                title=""
+                coords="31,4725,229,4785"
+                href="https://www.instagram.com/p/DAX0P1wTN-L/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
               />
             </map>
