인스타 링크 수정

--- a/public/173_kspo/main.html
+++ b/public/173_kspo/main.html
@@ -125,7 +125,7 @@
                 alt="이벤트"
                 title=""
                 coords="31,4725,229,4785"
-                href="https://www.instagram.com/p/DAX0P1wTN-L/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                href="https://www.instagram.com/p/DAX12JszWxP/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
               />
             </map>
