--- a/public/173_kspo/main.html
+++ b/public/173_kspo/main.html
@@ -37,7 +37,7 @@
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
                 coords="512,385,717,466"
-                href="./card/01.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4674"
                 target="_blank"
               />
               <area
@@ -45,7 +45,7 @@
                 alt="스포츠굿즈서비스"
                 title=""
                 coords="24,897,228,980"
-                href="./card/02.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4675"
                 target="_blank"
               />
               <area
@@ -53,7 +53,7 @@
                 alt="*"
                 title="선도기업 성과사례"
                 coords="392,1323,613,1398"
-                href="./card/03.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4676"
                 target="_blank"
               />
               <area
@@ -61,7 +61,7 @@
                 alt="*"
                 title="이슈페이퍼"
                 coords="9,1676,229,1772"
-                href="./card/04.html"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4655&keyKind=ALL&keyWord="
                 target="_blank"
               />
               <area
@@ -69,7 +69,7 @@
                 alt="*"
                 title="SI포커스"
                 coords="500,2111,714,2208"
-                href="./card/05.html"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4654&keyWord="
                 target="_blank"
               />
               <area
@@ -77,7 +77,7 @@
                 alt="스포츠동향아카이브"
                 title=""
                 coords="31,2785,228,2854"
-                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6141&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
+                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6186&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
                 target="_blank"
               />
               <area
@@ -93,7 +93,7 @@
                 alt="스포츠컨퍼런스박람회"
                 title=""
                 coords="13,3531,216,3606"
-                href="./card/08.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4677"
                 target="_blank"
               />
               <area
