--- a/public/174_kspo/main.html
+++ b/public/174_kspo/main.html
@@ -19,13 +19,13 @@
         <tr>
           <td>
             <img
-              src="https://godjewel.co.kr/173_kspo/src/cover01.jpg"
+              src="https://godjewel.co.kr/174_kspo/src/cover01.jpg"
               alt="뉴스레터 상단"
               style="display: block"
               width="730"
             />
             <img
-              src="https://godjewel.co.kr/173_kspo/src/cover02.jpg"
+              src="https://godjewel.co.kr/174_kspo/src/cover02.jpg"
               usemap="#map"
               alt="뉴스레터 하단"
               style="display: block"
@@ -37,7 +37,7 @@
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
                 coords="512,385,717,466"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4674"
+                href="https://godjewel.co.kr/174_kspo/card/01.html"
                 target="_blank"
               />
               <area
@@ -45,38 +45,38 @@
                 alt="스포츠굿즈서비스"
                 title=""
                 coords="24,897,228,980"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4675"
+                href="https://godjewel.co.kr/174_kspo/card/02.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="선도기업 성과사례"
-                coords="392,1323,613,1398"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4676"
+                coords="263,1335,479,1410"
+                href="https://godjewel.co.kr/174_kspo/card/03.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="이슈페이퍼"
-                coords="9,1676,229,1772"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4655&keyKind=ALL&keyWord="
+                coords="510,1804,718,1881"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4665&keyKind=ALL&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="SI포커스"
-                coords="500,2111,714,2208"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4654&keyWord="
+                coords="139,2035,320,2100"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4664&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠동향아카이브"
                 title=""
-                coords="31,2785,228,2854"
+                coords="35,2788,221,2849"
                 href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6186&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
                 target="_blank"
               />
@@ -84,16 +84,16 @@
                 shape="rect"
                 alt="gsr"
                 title=""
-                coords="6,3193,251,3287"
-                href="https://m.sports.re.kr/front/board/bs/boardView.do?board_seq=101&pageNo=1&menu_seq=+976&con_seq=6179&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord"
+                coords="33,3208,211,3270"
+                href="https://m.sports.re.kr/front/board/bs/boardView.do?board_seq=101&pageNo=1&menu_seq=+976&con_seq=6200&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠컨퍼런스박람회"
                 title=""
-                coords="13,3531,216,3606"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4677"
+                coords="25,3532,204,3601"
+                href="https://godjewel.co.kr/174_kspo/card/08.html"
                 target="_blank"
               />
               <area
@@ -116,18 +116,18 @@
                 shape="rect"
                 alt="스낵스포츠-인스타로 연결"
                 title=""
-                coords="511,4383,706,4459"
-                href="https://www.instagram.com/p/DAX0P1wTN-L/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                coords="487,4389,689,4464"
+                href="https://godjewel.co.kr/174_kspo/card/09.html"
                 target="_blank"
               />
-              <area
+              <!-- <area
                 shape="rect"
                 alt="이벤트"
                 title=""
                 coords="31,4725,229,4785"
                 href="https://www.instagram.com/p/DAX12JszWxP/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
-              />
+              /> -->
             </map>
           </td>
         </tr>
