[feature] 174 snack added

--- a/public/174_kspo/main.html
+++ b/public/174_kspo/main.html
@@ -117,7 +117,7 @@
                 alt="스낵스포츠-인스타로 연결"
                 title=""
                 coords="487,4389,689,4464"
-                href="https://godjewel.co.kr/174_kspo/card/09.html"
+                href="https://www.instagram.com/p/DBveVKVzSfn/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
               />
               <!-- <area
