--- a/public/174_kspo/main.html
+++ b/public/174_kspo/main.html
@@ -37,7 +37,7 @@
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
                 coords="512,385,717,466"
-                href="https://godjewel.co.kr/174_kspo/card/01.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4686"
                 target="_blank"
               />
               <area
@@ -45,7 +45,7 @@
                 alt="스포츠굿즈서비스"
                 title=""
                 coords="24,897,228,980"
-                href="https://godjewel.co.kr/174_kspo/card/02.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4687"
                 target="_blank"
               />
               <area
@@ -53,7 +53,7 @@
                 alt="*"
                 title="선도기업 성과사례"
                 coords="263,1335,479,1410"
-                href="https://godjewel.co.kr/174_kspo/card/03.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4688"
                 target="_blank"
               />
               <area
@@ -93,7 +93,7 @@
                 alt="스포츠컨퍼런스박람회"
                 title=""
                 coords="25,3532,204,3601"
-                href="https://godjewel.co.kr/174_kspo/card/08.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4689"
                 target="_blank"
               />
               <area
