--- a/public/175_kspo/main.html
+++ b/public/175_kspo/main.html
@@ -36,71 +36,71 @@
                 shape="rect"
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
-                coords="512,385,717,466"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4686"
+                coords="517,336,715,416"
+                href="./card/01.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠굿즈서비스"
                 title=""
-                coords="24,897,228,980"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4687"
+                coords="27,898,222,970"
+                href="./card/02.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="선도기업 성과사례"
-                coords="263,1335,479,1410"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4688"
+                coords="260,1338,469,1415"
+                href="./card/03.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="이슈페이퍼"
-                coords="510,1804,718,1881"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4665&keyKind=ALL&keyWord="
+                coords="514,1806,710,1878"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4680&keyKind=ALL&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="SI포커스"
-                coords="139,2035,320,2100"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4664&keyWord="
+                coords="127,2042,327,2109"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4679&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠동향아카이브"
                 title=""
-                coords="35,2788,221,2849"
-                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6186&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
+                coords="38,2784,219,2850"
+                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6230&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="gsr"
                 title=""
-                coords="33,3208,211,3270"
-                href="https://m.sports.re.kr/front/board/bs/boardView.do?board_seq=101&pageNo=1&menu_seq=+976&con_seq=6200&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
+                coords="19,3202,212,3277"
+                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=101&pageNo=1&menu_seq=+976&con_seq=6221&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠컨퍼런스박람회"
                 title=""
-                coords="25,3532,204,3601"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4689"
+                coords="14,3743,193,3814"
+                href="./card/08.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt=""
                 title="한국스포츠정책과학원"
-                coords="467,3897,548,3979"
+                coords="470,3904,541,3972"
                 href="https://spobiz.kspo.or.kr/front/index.do"
                 target="_blank"
               />
@@ -108,7 +108,7 @@
                 shape="rect"
                 alt=""
                 title="인스타그램"
-                coords="550,3900,623,3978"
+                coords="547,3904,622,3974"
                 href="https://www.instagram.com/kspo_newsletter/"
                 target="_blank"
               />
@@ -116,8 +116,8 @@
                 shape="rect"
                 alt="스낵스포츠-인스타로 연결"
                 title=""
-                coords="487,4389,689,4464"
-                href="https://www.instagram.com/p/DBveVKVzSfn/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                coords="43,4294,221,4368"
+                href="https://www.instagram.com/p/DC3KZ0lzeJu/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
               />
               <!-- <area
