--- a/public/175_kspo/main.html
+++ b/public/175_kspo/main.html
@@ -37,7 +37,7 @@
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
                 coords="517,336,715,416"
-                href="./card/01.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4696"
                 target="_blank"
               />
               <area
@@ -45,7 +45,7 @@
                 alt="스포츠굿즈서비스"
                 title=""
                 coords="27,898,222,970"
-                href="./card/02.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4697"
                 target="_blank"
               />
               <area
@@ -53,7 +53,7 @@
                 alt="*"
                 title="선도기업 성과사례"
                 coords="260,1338,469,1415"
-                href="./card/03.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4698"
                 target="_blank"
               />
               <area
@@ -93,7 +93,7 @@
                 alt="스포츠컨퍼런스박람회"
                 title=""
                 coords="14,3743,193,3814"
-                href="./card/08.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4699"
                 target="_blank"
               />
               <area
