--- a/public/176_kspo/main.html
+++ b/public/176_kspo/main.html
@@ -14,18 +14,18 @@
       cellspacing="0"
       style="border-collapse: collapse"
     >
-      <!-- .https://spobiz.kspo.or.kr/images/newsletter/20240724/cover01.jpg -->
+      <!-- .https://spobiz.kspo.or.kr/images/newsletter/20241223/cover01.jpg -->
       <tbody>
         <tr>
           <td>
             <img
-              src="https://godjewel.co.kr/175_kspo/src/cover01.jpg"
+              src="./src/cover01.jpg"
               alt="뉴스레터 상단"
               style="display: block"
               width="730"
             />
             <img
-              src="https://godjewel.co.kr/175_kspo/src/cover02.jpg"
+              src="./src/cover02.jpg"
               usemap="#map"
               alt="뉴스레터 하단"
               style="display: block"
@@ -36,71 +36,71 @@
                 shape="rect"
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
-                coords="517,336,715,416"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4696"
+                coords="509,326,699,404"
+                href="./card/01.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠굿즈서비스"
                 title=""
-                coords="27,898,222,970"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4697"
+                coords="30,899,216,961"
+                href="./card/02.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="선도기업 성과사례"
-                coords="260,1338,469,1415"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4698"
+                coords="266,1337,463,1408"
+                href="./card/03.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="이슈페이퍼"
-                coords="514,1806,710,1878"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4680&keyKind=ALL&keyWord="
+                coords="37,1804,229,1883"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4692&keyKind=ALL&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="*"
                 title="SI포커스"
-                coords="127,2042,327,2109"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4679&keyWord="
+                coords="16,2105,217,2182"
+                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4691&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠동향아카이브"
                 title=""
-                coords="38,2784,219,2850"
-                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6230&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
+                coords="21,2787,234,2849"
+                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=105&pageNo=1&menu_seq=+990&con_seq=6258&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="gsr"
                 title=""
-                coords="19,3202,212,3277"
-                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=101&pageNo=1&menu_seq=+976&con_seq=6221&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
+                coords="23,3197,209,3273"
+                href="https://www.sports.re.kr/front/board/bs/boardView.do?board_seq=101&pageNo=1&menu_seq=+976&con_seq=6246&keyKind3=&keyKind4=&keyKind5=&keyKind6=&keyKind7=&keyKind=TITLE&keyWord="
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt="스포츠컨퍼런스박람회"
                 title=""
-                coords="14,3743,193,3814"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4699"
+                coords="12,3744,221,3809"
+                href="./card/08.html"
                 target="_blank"
               />
               <area
                 shape="rect"
                 alt=""
                 title="한국스포츠정책과학원"
-                coords="470,3904,541,3972"
+                coords="466,3898,543,3982"
                 href="https://spobiz.kspo.or.kr/front/index.do"
                 target="_blank"
               />
@@ -108,7 +108,7 @@
                 shape="rect"
                 alt=""
                 title="인스타그램"
-                coords="547,3904,622,3974"
+                coords="551,3897,621,3991"
                 href="https://www.instagram.com/kspo_newsletter/"
                 target="_blank"
               />
@@ -116,18 +116,10 @@
                 shape="rect"
                 alt="스낵스포츠-인스타로 연결"
                 title=""
-                coords="43,4294,221,4368"
-                href="https://www.instagram.com/p/DC3KZ0lzeJu/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                coords="51,4292,216,4374"
+                href="https://www.instagram.com/p/DD8oV6YT4BC/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
               />
-              <!-- <area
-                shape="rect"
-                alt="이벤트"
-                title=""
-                coords="31,4725,229,4785"
-                href="https://www.instagram.com/p/DAX12JszWxP/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
-                target="_blank"
-              /> -->
             </map>
           </td>
         </tr>
