--- a/public/176_kspo/main.html
+++ b/public/176_kspo/main.html
@@ -37,7 +37,7 @@
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
                 coords="509,326,699,404"
-                href="./card/01.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4711"
                 target="_blank"
               />
               <area
@@ -45,7 +45,7 @@
                 alt="스포츠굿즈서비스"
                 title=""
                 coords="30,899,216,961"
-                href="./card/02.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4712"
                 target="_blank"
               />
               <area
@@ -53,7 +53,7 @@
                 alt="*"
                 title="선도기업 성과사례"
                 coords="266,1337,463,1408"
-                href="./card/03.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4713"
                 target="_blank"
               />
               <area
@@ -93,7 +93,7 @@
                 alt="스포츠컨퍼런스박람회"
                 title=""
                 coords="12,3744,221,3809"
-                href="./card/08.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4714"
                 target="_blank"
               />
               <area
