--- a/public/176_kspo/main.html
+++ b/public/176_kspo/main.html
@@ -19,13 +19,13 @@
         <tr>
           <td>
             <img
-              src="./src/cover01.jpg"
+              src="https://www.godjewel.co.kr/176_kspo/src/cover01.jpg"
               alt="뉴스레터 상단"
               style="display: block"
               width="730"
             />
             <img
-              src="./src/cover02.jpg"
+              src="https://www.godjewel.co.kr/176_kspo/src/cover02.jpg"
               usemap="#map"
               alt="뉴스레터 하단"
               style="display: block"
